# hearme

./: PRD.md
.github/workflows/: hearme-build.yml
hearme/: .gitignore  README.md  package.json
hearme/src/: index.html
hearme/src-tauri/: Cargo.toml  tauri.conf.json
hearme/src-tauri/capabilities/: default.json
hearme/src-tauri/src/: app.rs  codec.rs  lib.rs  main.rs  playback.rs  transport.rs
hearme/src-tauri/src/capture/: linux.rs  macos.rs  mod.rs  windows.rs
